<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <POU Name="PLC_PRG" Id="{64ce7901-a7f8-405d-aca1-10be90b183a4}" SpecialFunc="None">
    <Declaration><![CDATA[PROGRAM PLC_PRG
VAR
//triggers
	trigA0_DI1: R_TRIG;	//trigger for cylinder sensor 

	trigStart: R_TRIG;
END_VAR]]></Declaration>
    <Implementation>
      <ST><![CDATA[//sytem OK
gvl.systemOK := IO.A1_DI0; 
// triggers
trigA0_DI1(clk := IO.A1_DI1);
trigStart (clk := gvl.StartStop); 

IF NOT gvl.systemOK THEN 
	gvl.motor1.en := FALSE; 	//stopping the motors 
	gvl.motor2.en := FALSE;
	
	gvl.StartStop := FALSE; 	//stopping proces
END_IF

//calling program 
automat_PRG(SFCInit := trigStart.Q);
]]></ST>
    </Implementation>
    <LineIds Name="PLC_PRG">
      <LineId Id="34" Count="1" />
      <LineId Id="18" Count="3" />
      <LineId Id="36" Count="0" />
      <LineId Id="39" Count="1" />
      <LineId Id="43" Count="0" />
      <LineId Id="45" Count="0" />
      <LineId Id="38" Count="0" />
      <LineId Id="33" Count="0" />
      <LineId Id="23" Count="0" />
      <LineId Id="2" Count="0" />
      <LineId Id="32" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>